# orcapp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  check_output.txt  check_output_2.txt  check_output_3.txt  check_output_4.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: clipboard.rs  config.rs  dialog.rs  history.rs  mod.rs  recognition.rs  settings.rs  template.rs
src-tauri/src/db/: connection.rs  history.rs  mod.rs  model_config.rs  prompt_template.rs  settings.rs
src-tauri/src/services/: anthropic.rs  image.rs  llm.rs  mod.rs  openai.rs
src-tauri/src/utils/: crypto.rs
src/main/: index.ts  preload.ts
src/main/database/: index.ts
src/main/database/models/: history.ts  index.ts  modelConfig.ts  promptTemplate.ts  settings.ts
src/main/services/: anthropicAdapter.ts  imageService.ts  index.ts  llmService.ts  openaiAdapter.ts
src/main/utils/: crypto.ts  logger.ts
src/renderer/: App.tsx  electron.d.ts  main.tsx
src/renderer/api/: index.ts  tauri.ts
src/renderer/components/ImageUploader/: index.tsx
src/renderer/components/Layout/: index.tsx
src/renderer/components/ResultViewer/: index.tsx
src/renderer/pages/Config/: index.tsx
src/renderer/store/: configStore.ts  historyStore.ts  index.ts  recognitionStore.ts  settingsStore.ts
src/renderer/styles/: index.css
src/shared/types/: config.ts  history.ts  index.ts  recognition.ts  settings.ts
temp_asar_extract/: package.json
(+3 files in other folders)
