[package]
name = "image-recognition-app"
version = "1.0.0"
description = "跨平台桌面图片识别应用"
authors = ["Developer"]
edition = "2021"

[package.metadata.tauri-winres]
OriginalFilename = "图片识别工具.exe"
LegalCopyright = "Copyright 2024"
ProductName = "图片识别工具"
FileDescription = "跨平台桌面图片识别应用"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
image = "0.25"
aes-gcm = "0.10"
rand = "0.8"
chrono = "0.4"
futures = "0.3"
anyhow = "1"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
